Update config and add new method to routes

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -16,5 +16,8 @@
         "module": "commonjs"
       }
     ],
-    "suffix": ".bs.js"
+    "suffix": ".bs.js",
+    "warnings": {
+      "number": "-27"
+    }
   }
